project release adjustiments